<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.backgroundwork.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/lbl_background_work" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <Button
        android:text="@string/lbl_btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callMain"/>

    <Button
        android:text="@string/lbl_btn_handler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fromHandler"/>

    <Button
        android:text="@string/lbl_btn_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fromThread"/>

    <Button
        android:text="@string/lbl_btn_looper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="withLooper"/>



</LinearLayout>
